<resources>
    <string name="app_name">作业助手</string>
    <string name="action_settings">Settings</string>
    <string name="user">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="phone">请输入手机号</string>
    <string name="login">登入</string>
    <string name="up">注册</string>
    <string name="forget">忘记密码</string>
    <string name="title_activity_userinfo">userinfo</string>
    <string name="title_activity_show_message_li">showMessageLi</string>
    <string name="title_activity_nov_int">novInt</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">发布帖子</string>
    <string name="title_notifications">查看详情</string>
    <string name="title_activity_abcfd">abcfd</string>
    <string name="title_activity_novbar">novbar</string>
    <string name="title_activity_novart">novart</string>
</resources>
